# rust-embedded

./: Cargo.toml  cross-compile.md  readme.md
src/: main.rs
